# ACT2.3

./: CMakeLists.txt  Dato.cpp  Dato.h  LinkedList.cpp  LinkedList.h  Mapeo.txt  MyBST.cpp  MyBST.h  bitacora.txt  bitacora2.txt  bitacoraOrdenadaIP-Eq7-BST.txt  bitacoraReducida.txt  bitacora_ordenada.txt  main.cpp  out  output  salidaN-Eq
